--- a/public/css/howItWorks.css
+++ b/public/css/howItWorks.css
@@ -1,309 +1,279 @@
 * {
-  font-family: Metropolis, sans-serif;
-}
+    font-family: Metropolis, sans-serif; }
 
 h3 {
-  margin: 0;
-}
+    margin: 0; }
 
-.section-how-it-works {
-  padding: 0 116px;
-}
+section.container {
+    width: 1248px !important; }
+
+.container-t {
+    max-width: 1248px !important; }
 
 .how-it-works-top {
-  padding-top: 140px;
-  padding-bottom: 140px;
-}
+    padding-top: 140px;
+    padding-bottom: 140px; }
 .how-it-works-top .how-it-works-head {
-  text-align: center;
-}
+    text-align: center; }
 .how-it-works-top .how-it-works-head .how-it-works-title {
-  text-align: center;
-  font-weight: bold;
-  font-size: 58px;
-  color: #241F2D;
-}
+    text-align: center;
+    font-weight: bold;
+    font-size: 58px;
+    color: #241F2D; }
 .how-it-works-top .how-it-works-head .how-it-works-tabs {
-  padding-top: 30px;
-  margin: 0 auto;
-}
+    padding-top: 30px;
+    margin: 0 auto; }
 .how-it-works-top .how-it-works-head .how-it-works-tabs .tab-button {
-  padding: 10px 24px;
-  font-size: 14px;
-  font-weight: 600;
-  color: #76747D;
-  background: #F5F5F5;
-  display: inline-block;
-  outline: none;
-  border: none;
-}
+    padding: 10px 24px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #76747D;
+    background: #F5F5F5;
+    display: inline-block;
+    outline: none;
+    border: none; }
 .how-it-works-top .how-it-works-head .how-it-works-tabs .tab-button:nth-child(1) {
-  border-radius: 4px 0 0 4px;
-}
+    border-radius: 4px 0 0 4px; }
 .how-it-works-top .how-it-works-head .how-it-works-tabs .tab-button:nth-child(2) {
-  border-radius: 0 4px 4px 0;
-}
+    border-radius: 0 4px 4px 0; }
 .how-it-works-top .how-it-works-head .how-it-works-tabs .active {
-  background: #2C1D58;
-  color: #ffffff;
-}
+    background: #2C1D58;
+    color: #ffffff; }
 .how-it-works-top .how-it-works-head .how-it-works-head-text {
-  padding: 20px 0 60px;
-  font-size: 18px;
-  font-weight: normal;
-  color: #3F3B48;
-  max-width: 600px;
-  margin: auto;
-}
+    padding: 20px 0 60px;
+    font-size: 18px;
+    font-weight: normal;
+    color: #3F3B48;
+    max-width: 600px;
+    margin: auto; }
 .how-it-works-top .tab-body {
-  padding-top: 60px;
-}
+    padding-top: 60px; }
 .how-it-works-top .tab-body .right {
-  padding-top: 200px;
-}
+    padding-top: 200px; }
 .how-it-works-top .tab-body .work-method {
-  background-position: right top;
-  position: relative;
-}
+    background-position: right top;
+    position: relative; }
+.how-it-works-top .tab-body .work-method .work-method-img {
+    background-color: #F3F6FB;
+    width: 64px;
+    height: 64px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 64px;
+    border-radius: 50%; }
 .how-it-works-top .tab-body .work-method .work-method-title {
-  margin-top: 30px;
-  margin-bottom: 16px;
-  color: #241F2D;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 18px;
-}
+    margin-top: 30px;
+    margin-bottom: 16px;
+    color: #241F2D;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 18px; }
 .how-it-works-top .tab-body .work-method .work-method-text {
-  font-weight: normal;
-  font-size: 16px;
-  color: #3F3B48;
-}
+    font-weight: normal;
+    font-size: 16px;
+    color: #3F3B48; }
 .how-it-works-top .tab-body .bg-1 {
-  background-image: url("../img/1.png");
-  background-repeat: no-repeat;
-}
+    background-image: url("../img/1.svg");
+    background-repeat: no-repeat; }
 .how-it-works-top .tab-body .bg-3 {
-  background-image: url("../img/3.png");
-  background-repeat: no-repeat;
-  margin-top: 200px;
-}
+    background-image: url("../img/3.svg");
+    background-repeat: no-repeat;
+    margin-top: 200px; }
 .how-it-works-top .tab-body .bg-3:before {
-  content: "";
-  background: url("../img/Group 52.png") no-repeat center center;
-  background-size: 100% auto;
-  position: absolute;
-  top: -87px;
-  right: -100px;
-  z-index: 999;
-  width: 325px;
-  height: 87px;
-}
+    content: '';
+    background: url("../img/line-group-t-0.svg") no-repeat center center;
+    background-size: 100% auto;
+    position: absolute;
+    top: -87px;
+    right: -100px;
+    z-index: 999;
+    width: 325px;
+    height: 87px; }
 .how-it-works-top .tab-body .bg-2 {
-  background-image: url("../img/2.png");
-  background-repeat: no-repeat;
-}
+    background-image: url("../img/2.svg");
+    background-repeat: no-repeat; }
 .how-it-works-top .tab-body .bg-2:before {
-  content: "";
-  background: url("../img/Group 53.png") no-repeat center center;
-  background-size: 100% auto;
-  position: absolute;
-  top: -87px;
-  left: -100px;
-  z-index: 999;
-  width: 325px;
-  height: 87px;
-}
+    content: '';
+    background: url("../img/line-group-t-1.svg") no-repeat center center;
+    background-size: 100% auto;
+    position: absolute;
+    top: -87px;
+    left: -100px;
+    z-index: 999;
+    width: 325px;
+    height: 87px; }
 .how-it-works-top .tab-body .bg-4 {
-  background-image: url("../img/4.png");
-  background-repeat: no-repeat;
-  margin-top: 200px;
-}
+    background-image: url("../img/4.svg");
+    background-repeat: no-repeat;
+    margin-top: 200px; }
 .how-it-works-top .tab-body .bg-4:before {
-  content: "";
-  background: url("../img/Group 53.png") no-repeat center center;
-  background-size: 100% auto;
-  position: absolute;
-  top: -87px;
-  left: -100px;
-  z-index: 999;
-  width: 325px;
-  height: 87px;
-}
+    content: '';
+    background: url("../img/line-group-t-1.svg") no-repeat center center;
+    background-size: 100% auto;
+    position: absolute;
+    top: -87px;
+    left: -100px;
+    z-index: 999;
+    width: 325px;
+    height: 87px; }
+
+.bg-color-t {
+    background: #F3F6FB; }
 
 .how-it-works-bottom {
-  background: #F3F6FB;
-}
+    background: #F3F6FB; }
 .how-it-works-bottom .why-choose-block {
-  padding-top: 140px;
-}
+    padding-top: 140px; }
 .how-it-works-bottom .why-choose-block .why-choose-block-title {
-  font-weight: bold;
-  font-size: 42px;
-  text-align: center;
-  color: #241F2D;
-}
+    font-weight: bold;
+    font-size: 42px;
+    text-align: center;
+    color: #241F2D; }
 .how-it-works-bottom .why-choose-block .why-choose-block-sub-title {
-  font-weight: normal;
-  font-size: 18px;
-  text-align: center;
-  color: #3F3B48;
-  padding: 24px 0 0;
-}
+    font-weight: normal;
+    font-size: 18px;
+    text-align: center;
+    color: #3F3B48;
+    padding: 24px 0 0; }
 .how-it-works-bottom .why-choose-block .why-choose-block-content {
-  padding: 60px 0 80px;
-}
+    padding: 60px 0 80px; }
 .how-it-works-bottom .why-choose-block .why-choose-block-content .why-choose-item .why-choose-item-title {
-  padding-top: 24px;
-  font-weight: 600;
-  font-size: 18px;
-  color: #241F2D;
-}
+    padding-top: 24px;
+    font-weight: 600;
+    font-size: 18px;
+    color: #241F2D; }
+.how-it-works-bottom .why-choose-block .why-choose-block-content .why-choose-item .why-choose-item-img {
+    background-color: #fff;
+    width: 64px;
+    height: 64px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 64px;
+    border-radius: 50%; }
 .how-it-works-bottom .how-it-end-bg {
-  background-image: url("../img/about-end-bg.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-  margin-bottom: 140px;
-}
+    background-image: url("../img/about-end-bg.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-bottom: 140px;
+    border-radius: 4px; }
 .how-it-works-bottom .how-it-end-bg .about-end-text {
-  padding: 103px 104px;
-}
+    padding: 103px 10px; }
 .how-it-works-bottom .how-it-end-bg .about-end-text h2 {
-  font-weight: bold;
-  font-size: 32px;
-  color: #FFF;
-}
+    font-weight: bold;
+    font-size: 32px;
+    color: #FFF; }
 .how-it-works-bottom .how-it-end-bg .about-end-button {
-  padding: 138px 0;
-}
+    padding: 138px 0; }
 .how-it-works-bottom .how-it-end-bg .about-end-button .get-started {
-  background: #f54838;
-  border: none;
-  border-radius: 4px;
-  outline: none;
-  color: #fff;
-  flex-direction: column;
-  padding: 12px 30px;
-  font-family: Metropolis, sans-serif;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 15px;
-}
+    background: #f54838;
+    border: none;
+    border-radius: 4px;
+    outline: none;
+    color: #fff;
+    flex-direction: column;
+    padding: 12px 30px;
+    font-family: Metropolis, sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px; }
 .how-it-works-bottom .how-it-end-bg .about-end-button .get-started:hover, .how-it-works-bottom .how-it-end-bg .about-end-button .get-started:active {
-  background-color: #f32916;
-}
+    background-color: #f32916; }
 
 /* Responsive */
+@media only screen and (max-width: 1260px) {
+    .how-it-works-bottom {
+        padding-left: 60px;
+        padding-right: 60px; } }
 @media only screen and (max-width: 1100px) {
-  .how-it-works-top .tab-body .bg-2 {
-    background-image: url("../img/2.png");
-    background-repeat: no-repeat;
-  }
-  .how-it-works-top .tab-body .bg-2:before {
-    content: "";
-    width: 200px;
-    height: 87px;
-    left: -70px;
-  }
-  .how-it-works-top .tab-body .bg-3 {
-    background-image: url("../img/3.png");
-    background-repeat: no-repeat;
-    margin-top: 200px;
-  }
-  .how-it-works-top .tab-body .bg-3:before {
-    content: "";
-    width: 200px;
-    height: 87px;
-    right: -70px;
-  }
-  .how-it-works-top .tab-body .bg-4 {
-    background-image: url("../img/4.png");
-    background-repeat: no-repeat;
-    margin-top: 200px;
-  }
-  .how-it-works-top .tab-body .bg-4:before {
-    content: "";
-    width: 200px;
-    height: 87px;
-    left: -70px;
-  }
-}
+    .how-it-works-top .tab-body .bg-2 {
+        background-image: url("../img/2.svg");
+        background-repeat: no-repeat; }
+    .how-it-works-top .tab-body .bg-2:before {
+        content: '';
+        width: 200px;
+        height: 87px;
+        left: -70px; }
+    .how-it-works-top .tab-body .bg-3 {
+        background-image: url("../img/3.svg");
+        background-repeat: no-repeat;
+        margin-top: 200px; }
+    .how-it-works-top .tab-body .bg-3:before {
+        content: '';
+        width: 200px;
+        height: 87px;
+        right: -70px; }
+    .how-it-works-top .tab-body .bg-4 {
+        background-image: url("../img/4.svg");
+        background-repeat: no-repeat;
+        margin-top: 200px; }
+    .how-it-works-top .tab-body .bg-4:before {
+        content: '';
+        width: 200px;
+        height: 87px;
+        left: -70px; } }
 @media only screen and (max-width: 993px) {
-  .section {
-    padding-right: 60px;
-    padding-left: 60px;
-  }
+    .section {
+        padding-right: 60px;
+        padding-left: 60px; }
 
-  .how-it-works-top .tab-body .work-method {
-    padding: 10px;
-  }
-  .how-it-works-top .tab-body .bg-2 {
-    background-image: url("../img/2.png");
-    background-repeat: no-repeat;
-  }
-  .how-it-works-top .tab-body .bg-2:before {
-    content: "";
-    width: 200px;
-    height: 87px;
-    left: 0px;
-  }
-  .how-it-works-top .tab-body .bg-3 {
-    background-image: url("../img/3.png");
-    background-repeat: no-repeat;
-    margin-top: 200px;
-  }
-  .how-it-works-top .tab-body .bg-3:before {
-    content: "";
-    width: 200px;
-    height: 87px;
-    right: 0px;
-  }
-  .how-it-works-top .tab-body .bg-4 {
-    background-image: url("../img/4.png");
-    background-repeat: no-repeat;
-    margin-top: 200px;
-  }
-  .how-it-works-top .tab-body .bg-4:before {
-    content: "";
-    width: 200px;
-    height: 87px;
-    left: 0px;
-  }
+    .how-it-works-top .tab-body .work-method {
+        padding: 10px; }
+    .how-it-works-top .tab-body .bg-2 {
+        background-image: url("../img/2.svg");
+        background-repeat: no-repeat; }
+    .how-it-works-top .tab-body .bg-2:before {
+        content: '';
+        width: 200px;
+        height: 87px;
+        left: 0; }
+    .how-it-works-top .tab-body .bg-3 {
+        background-image: url("../img/3.svg");
+        background-repeat: no-repeat;
+        margin-top: 200px; }
+    .how-it-works-top .tab-body .bg-3:before {
+        content: '';
+        width: 200px;
+        height: 87px;
+        right: 0px; }
+    .how-it-works-top .tab-body .bg-4 {
+        background-image: url("../img/4.svg");
+        background-repeat: no-repeat;
+        margin-top: 200px; }
+    .how-it-works-top .tab-body .bg-4:before {
+        content: '';
+        width: 200px;
+        height: 87px;
+        left: 0px; }
 
-  .how-it-works-bottom .how-it-end-bg .about-end-button {
-    padding: 60px;
-    display: flex;
-  }
-  .how-it-works-bottom .how-it-end-bg .about-end-button .get-started {
-    align-self: center;
-  }
-  .how-it-works-bottom .how-it-end-bg .about-end-text {
-    padding: 60px;
-  }
-}
+    .how-it-works-bottom .how-it-end-bg .about-end-button {
+        padding: 60px 10px;
+        display: flex; }
+    .how-it-works-bottom .how-it-end-bg .about-end-button .get-started {
+        align-self: center; }
+    .how-it-works-bottom .how-it-end-bg .about-end-text {
+        padding: 60px 10px; } }
 @media only screen and (max-width: 768px) {
-  .work-method {
-    margin-top: 50px !important;
-  }
-  .work-method:before {
-    display: none !important;
-  }
+    .work-method {
+        margin-top: 50px !important; }
+    .work-method:before {
+        display: none !important; }
 
-  .right {
-    padding: 0 !important;
-  }
+    .right {
+        padding: 0 !important; }
 
-  .why-choose-block-content .why-choose-item-img, .why-choose-block-content .why-choose-item-title {
-    text-align: center;
-  }
-  .why-choose-block-content > div {
-    margin-top: 20px;
-  }
-}
+    .why-choose-block-content .why-choose-item-img, .why-choose-block-content .why-choose-item-title {
+        text-align: center; }
+    .why-choose-block-content > div {
+        margin-top: 20px; }
+
+    .how-it-works-bottom .how-it-end-bg .about-end-text {
+        padding: 60px 40px 0; } }
 @media only screen and (max-width: 420px) {
-  .section {
-    padding-right: 20px;
-    padding-left: 20px;
-  }
-}
+    .section {
+        padding-right: 20px;
+        padding-left: 20px; }
+
+    .how-it-works-bottom .how-it-end-bg .about-end-text {
+        padding: 60px 20px 0; } }
 
 /*# sourceMappingURL=howItWorks.css.map */
