--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,34 +1,30 @@
 /*---------------home page start------------------*/
 @media (max-width: 1312px) {
     #home_form {
-        width: 70%;
-        padding-left: 5%!important;
     }
 
 }
 
 @media (max-width: 1213px) {
     #home_form {
-        width: 80%;
-        padding-left: 7%!important;
     }
 
     .help_left h2 {
         margin: 90px 0 20px 90px
     }
+
+    .all_container, .my_container, .footer_container,.all_container_2 {
+        margin: 0 20px!important;
+    }
 }
 
 @media (max-width: 1180px) {
     #home_form {
-        width: 90%;
-        padding-left: 10%!important;
     }
 }
 
 @media (max-width: 1012px) {
-    #home_form {
-        width: 100%;
-    }
+
 
     #content_home_container {
         width: 100%;
@@ -38,6 +34,19 @@
 @media (max-width: 920px) {
     .help_left h2 {
         margin: 40px 0 20px 40px
+    }
+
+    .testimonial {
+        padding: 10px;
+    }
+
+    .profil_review_conatner{
+        padding: 0!important;
+        margin-top: 10px;
+    }
+
+    .carousel .testimonial p {
+        padding: 5px;
     }
 }
 
@@ -102,9 +111,8 @@
     .select_blocks {
         width: 24%;
     }
-
     #home_form {
-        padding: 0!important;
+        box-shadow: none!important;
     }
 
     .select_container p {
@@ -133,6 +141,10 @@
         padding-right: 5%;
     }
 
+    div.why_choose_us_blocks {
+        margin: 0!important;
+    }
+
 }
 
 @media (max-width: 775px){
@@ -152,6 +164,7 @@
 }
 
 @media (max-width: 767px) {
+
     #start_using_container {
         flex-direction: column;
         text-align: center;
@@ -168,11 +181,20 @@
     .start_using_right a {
         width: 120px;
     }
+
+    .carousel-control.left {
+        right: 50px;
+    }
+
+    .carousel .carousel-control {
+        margin-right: 20px;
+    }
 }
 
 @media (max-width: 591px) {
     .translators_container_block_row {
         flex-direction: column;
+        align-items: center;
     }
 
     .row {
@@ -192,6 +214,7 @@
     #home_form_search_btn {
         border-radius: 4px 4px;
         padding: 22px 24px;
+        margin-top: 10px;
     }
 
     .select_container select {
@@ -201,11 +224,13 @@
 
     .select_blocks {
         width: 100%;
+        border: none;
     }
 
     #home_form {
         margin-bottom: -124px;
         align-items: center;
+        box-shadow: none!important;
     }
 }
 
@@ -215,13 +240,34 @@
         margin: 3% auto;
     }
     .profil_review_conatner {
-        padding-left: 3%;
+        padding-left: 5%!important;
+    }
+}
+
+@media (max-width: 536px) {
+    .carousel .carousel-control {
+        width: 30px;
+        height: 30px;
+    }
+    .carousel-control.left {
+        left: auto;
+        right: 55px;
+        top: 80px
+    }
+
+    .carousel-control.right {
+        left: auto;
+        top: 80px
     }
 }
 
 @media (max-width: 425px){
+    .help_left h2 {
+        margin: 124px 5px 40px 5px;
+    }
+
     h2#our_clients_h2 {
-        font-size: 32px;
+
     }
     .hedding_text_container h1 {
         padding-top: 100px;
@@ -238,6 +284,20 @@
     }
 }
 
+@media (max-width: 320px) {
+    .carousel-control.left {
+        left: auto;
+        right: 50px;
+        top: 30px
+    }
+
+    .carousel-control.right {
+        top: 30px;
+    }
+    .carousel .carousel-control {
+        margin: 80px!important;
+    }
+}
 /*---------------home page end------------------*/
 
 @media only screen and (max-width: 768px){
@@ -269,7 +329,7 @@
     .registrationDivS{
         flex-wrap: wrap;
     }
-  
+
     .registrationDiv{
         margin-bottom: 60px;
 
@@ -320,7 +380,7 @@
 }
 
 @media (max-width: 750px){
-    footer {
+    .footer_container {
         flex-direction: column!important;
         justify-content: center!important;
         text-align: center;
@@ -331,7 +391,7 @@
         padding: 0;
         text-align: center;
     }
-    
+
     .soc {
         justify-content: center;
     }
@@ -418,5 +478,5 @@
       margin-top: 30px;
     }
   }
-  
+
   /* registration css end */
