--- a/public/css/style.css
+++ b/public/css/style.css
@@ -54,12 +54,39 @@ li {
 }
 
 /* --------------------------  header start -----------------------------------*/
-header {
-    padding: 20px 3%;
+.all_container_2 {
+    max-width: 1208px;
+    margin: auto!important;
+}
+
+#header1_navbar {
+    padding: 30px 0 33px 0!important;
+}
+
+#header1_navbar ul.black_menu a {
+    margin-right: 22px!important;
+    color: #241F2D!important;
+}
+/*#header1_navbar li a {*/
+/*    margin-right: 22px!important;*/
+/*    color: #241F2D!important;*/
+/*}*/
+
+#header1_navbar li a.nav-link::last-child {
+    margin-right: 0!important;
 }
 
 .logo {
     margin-right: 5%!important;
+}
+
+ul.black_menu a {
+    font-family: Metropolis;
+    font-style: normal;
+    font-weight: 600!important;
+    font-size: 14px;
+    line-height: 20px;
+    color: #241F2D!important;
 }
 
 .nav-item a.nav-link {
@@ -91,26 +118,57 @@ header {
 
 }
 
+
+
 /* header end */
 /*//home page start*/
-#homeHeader {
+#header_background {
+    width: 100%;
     background: url("../img/home.png") no-repeat top;
     background-size: cover;
 }
 
-#header2_navbar_ul a,#header2_navbar a#navbarDropdown {
+
+.my_container {
+    max-width: 1208px;
+    margin: auto!important;
+}
+
+#header2_navbar {
+    padding: 30px 0 0 0!important;
+}
+
+.menu_blog {
+    margin-right: 0!important;
+}
+
+.navbar-expand-lg .navbar-nav .nav-link {
+    margin-right: 22px!important;
     color: #FFFFFF!important;
 }
-/*#header2_navbar_ul a {*/
-/*    color: #FFFFFF!important;*/
-/*}*/
 
-#header2_navbar_ul a {
-
-}
 
 #login_signup_block a {
-    color: #FFFFFF!important;
+     color: #FFFFFF!important;
+}
+
+li.home_header_default_link_login a {
+    font-family: Metropolis;
+    font-style: normal;
+    font-weight: 600!important;
+    font-size: 14px;
+    line-height: 20px;
+    color: #fff!important;
+}
+
+li.home_header_default_link_signup a {
+    background-color: #F54838!important;
+    color: #fff!important;
+    font-family: Metropolis;
+    font-style: normal;
+    font-weight: 600!important;
+    font-size: 14px;
+    line-height: 20px
 }
 
 .hedding_text_container {
@@ -144,14 +202,14 @@ header {
 }
 
 #home_form {
-    width: 60%;
     display: flex;
     justify-content: center;
     align-items: flex-start;
     flex-direction: column;
-    margin: 0 auto -47px auto;
+    margin: 0 auto -32px auto;
     padding: 0!important;
     z-index: 2222!important;
+    box-shadow: 0px 12px 48px rgba(118, 116, 125, 0.08), 0px 1px 1px rgba(118, 116, 125, 0.2)!important;
 }
 
 #home_form_button_block button  {
@@ -165,13 +223,17 @@ header {
 }
 
 #home_form_search_btn {
-    background: #F54838;
+    border: none;
+    font-family: Metropolis;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 20px;
     color: #FFFFFF;
-    border-radius: 0px 4px 4px 0px;
     width: 102px;
     height: 64px;
-    padding: 22px 24px;
-    border: none;
+    background: #F54838;
+    border-radius: 0px 4px 4px 0px;
 }
 
 .row#home_select {
@@ -180,6 +242,9 @@ header {
 
 #label1, #label2 {
     border-radius: 4px 4px 0px 0px;
+}
+.btn-secondary {
+    background: #3F3B48!important;
 }
 
 label.active {
@@ -202,11 +267,10 @@ label.active {
 .select_blocks {
     background: #FFFFFF;
     display: flex;
-    justify-content: center;
     flex-direction: column;
-    padding: 0 5px!important;
     align-items: flex-start;
-    height: 64px;
+    border-right: 1px solid #E0E0E1;
+    padding: 12px 16px!important;
 }
 
 .select_container p {
@@ -215,54 +279,65 @@ label.active {
     font-weight: 500;
     font-size: 12px;
     line-height: 14px;
+    margin-bottom: 4px;
     text-transform: uppercase;
     color: #97959D;
-    padding-left: 5px;
-    margin-bottom: 4px;
 }
 
 .select_container select {
-    outline: none;
+    outline: none!important;
+    -webkit-appearance: none!important;
+    -moz-appearance: none!important;
+    -o-appearance: none!important;
     border: 0;
-}
-
-.select_container select option {
+    background: transparent url("../img/Vector.svg") no-repeat right top;
+    cursor: pointer;
+    appearance: none!important;
+    outline: none;
+    font-size: 15px;
     font-family: Metropolis;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 500!important;
     font-size: 15px;
     line-height: 22px;
     color: #241F2D;
 }
 
+.select_container select::after {
+    content: none!important;
+    outline: none!important;
+}
+
 #section_container_home {
-    max-width: 1440px;
+    max-width: 1208px;
+    margin: auto;
+}
+
+.bg {
     background: linear-gradient(180deg, #F3F6FB 0%, #FFFFFF 100%);
 }
 
 #content_home_container {
-    width: 80%;
+    width: 100%;
     margin: auto;
     padding: 158px 0 0 0;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: end;
 }
 
 .content_home_blocks {
-    padding: 0 15px;
+    margin-right: 40px;
+}
+
+.content_home_blocks:last-child {
+    margin-right: 0;
 }
 
 .content_home_blocks div {
-    background: #FFFFFF;
-    padding: 10px;
     display: inline-block;
     border-radius: 50%;
     margin-bottom: 24px;
-}
-
-.content_home_blocks img {
-
 }
 
 .content_home_blocks h5 {
@@ -296,12 +371,13 @@ label.active {
     line-height: 120%;
     text-align: center;
     color: #241F2D;
+    margin:0;
 }
 
 #translators_container_block {
-    width: 80%;
+    width: 100%;
     margin: auto;
-    padding-top: 73px;
+    padding-top: 40px;
     background: #FFFFFF;
     box-shadow: 0px 12px 48px rgba(118, 116, 125, 0.08), 0px 1px 1px rgba(118, 116, 125, 0.2);
     border-radius: 4px;
@@ -313,6 +389,7 @@ label.active {
 }
 
 .translators_block_rows {
+    width: 302px!important;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -324,11 +401,15 @@ label.active {
 }
 
 .translators_block_rows img {
-    margin-bottom: 15px;
+    padding:  17px 0;
+}
+
+.translators_block_rows a:hover {
+    text-decoration: none;
 }
 
 .translators_block_rows h6 {
-    margin-bottom: 4px;
+    padding-bottom: 4px;
     font-family: Metropolis;
     font-style: normal;
     font-weight: 600;
@@ -346,7 +427,16 @@ label.active {
     line-height: 16px;
     text-align: center;
     color: #97959D;
+    padding-bottom: 32px;
 }
+
+/*#translators_container_block_row_2 img {
+    padding-top: 0;
+}*/
+/*
+#translators_container_block_row_2 .translators_block_rows {
+    padding-top: 0;
+}*/
 
 #why_choose_us_container {
     margin-top: 134px;
@@ -361,6 +451,7 @@ label.active {
     line-height: 120%;
     text-align: center;
     color: #241F2D;
+    margin-bottom: 24px;
 }
 
 #why_choose_us_container h6 {
@@ -371,10 +462,11 @@ label.active {
     line-height: 156%;
     text-align: center;
     color: #3F3B48;
+    margin-bottom: 60px;
 }
 
 #why_choose_us_block {
-    width: 80%;
+    width: 100%;
     margin: 79px auto 0 auto;
     display: flex;
     justify-content: flex-start;
@@ -394,10 +486,6 @@ label.active {
 
 .why_choose_us_blocks:last-child {
     margin-right: 0;
-}
-
-.why_choose_us_blocks img {
-    padding: 10px;
 }
 
 .why_choose_us_blocks h5 {
@@ -438,24 +526,33 @@ a#a_findtranslators {
     order: 0;
     align-self: center;
 }
+
+a#a_findtranslators:hover {
+    text-decoration: none;
+}
+
 /*----------------------- slider start  ------------- */
 #clients_say {
+    width: 100%!important;
     background: linear-gradient(180deg, #F3F6FB 0%, #FFFFFF 100%);
-    padding-bottom: 70px;
+    margin-bottom: 70px;
+    padding: 20px;
+
 }
-.carousel {
-    margin: 50px auto;
-}
+
 .carousel .item {
     color: #999;
     overflow: hidden;
-    min-height: 120px;
     font-size: 13px;
+    padding: 5px;
+}
+
+.carousel .item:last-child {
+
+    padding-right: 0;
 }
 .carousel .media {
     position: relative;
-    padding: 0 0 0 20px;
-    margin-left: 20px;
 }
 .carousel .media img {
     width: 75px;
@@ -466,6 +563,13 @@ a#a_findtranslators {
     border: 2px solid #fff;
 }
 
+.testimonial {
+    background: #FFFFFF;
+    box-shadow: 0px 12px 48px rgba(118, 116, 125, 0.08), 0px 1px 1px rgba(118, 116, 125, 0.2)!important;
+    border-radius: 4px!important;
+
+}
+
 .carousel .testimonial p {
     font-family: Metropolis;
     font-style: italic;
@@ -473,7 +577,9 @@ a#a_findtranslators {
     font-size: 18px;
     line-height: 145%;
     color: #241F2D;
-    margin: 48px;
+    margin: auto;
+    text-align: left;
+    padding: 48px 48px 29px 48px;
 }
 
 .carousel .testimonial::before {
@@ -484,22 +590,27 @@ a#a_findtranslators {
 }
 
 .review_blocks {
-    background: #FFFFFF;
-    box-shadow: 0px 12px 48px rgba(118, 116, 125, 0.08), 0px 1px 1px rgba(118, 116, 125, 0.2);
-    border-radius: 4px;
     text-align: left;
-    width: 480px;
     display: flex;
 }
 
 .carousel .carousel-control {
+    margin-right: 116px;
     background: #FFFFFF;
     border-radius: 100px;
-    color: #3F3B48;
-    width: 30px;
-    height: 30px;
+    color: #76747D;
+    width: 48px;
+    height: 48px;
     text-shadow: none;
     top: 4px;
+}
+
+.carousel .carousel-control:focus {
+    color: #76747D;
+}
+
+.carousel .carousel-control:hover {
+    color: #76747D;
 }
 
 .carousel .item .row > div:first-child .media {
@@ -522,8 +633,9 @@ a#a_findtranslators {
 }
 .carousel-control.left {
     left: auto;
-    right: 40px;
+    right: 75px;
 }
+
 .carousel-control.right {
     left: auto;
 }
@@ -531,6 +643,7 @@ a#a_findtranslators {
 .carousel-indicators {
     bottom: -80px;
 }
+
 .carousel-indicators li, .carousel-indicators li.active {
     width: 18px;
     height: 18px;
@@ -558,6 +671,7 @@ h2#our_clients_h2  {
     line-height: 120%;
     color: #241F2D;
     margin-bottom: 60px;
+    margin-top: 140px;
 }
 
 .profil_review_conatner {
@@ -588,6 +702,10 @@ h2#our_clients_h2  {
     line-height: 18px;
     color: #97959D;
 }
+
+#slider_coll {
+
+}
 /*----------------------- slider end ------------- */
 
 /*----------------------- help block start ------------- */
@@ -595,7 +713,7 @@ h2#our_clients_h2  {
     background: #EAEEF5;
     border-radius: 4px;
     width: 60%;
-    margin: 0 auto 140px auto;
+    margin: 70px auto 140px auto;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -608,7 +726,7 @@ h2#our_clients_h2  {
 
 .help_left h2 {
     font-family: Metropolis;
-    margin: 124px 0 40px 140px;
+    margin: 124px 0 40px 54px;
     font-style: normal;
     font-weight: bold;
     font-size: 42px;
@@ -640,9 +758,9 @@ h2#our_clients_h2  {
 }
 
 .help_text_container h5::before {
-    content: "";
+    content: url("../img/lineHelp.png");
     display: block;
-    background: url("../img/lineHelp.png") no-repeat;
+    background:  no-repeat;
     width: 24px;
     height: 1.5px;
     margin-left: -51px;
@@ -680,7 +798,7 @@ h2#our_clients_h2  {
 /*----------------------- get started start ------------- */
 
 #start_using_container {
-    width: 80%;
+    width: 100%;
     margin: 0 auto 140px auto;
     display: flex;
     justify-content: space-around;
@@ -722,12 +840,18 @@ h2#our_clients_h2  {
     display: inline-block;
 }
 
+.start_using_right a:hover {
+    color: #FFFFFF;
+    text-decoration: none;
+}
+
 /*----------------------- get started end ------------- */
 
-/*#all_container {
-    max-width: 1440px;
-    margin: auto;
-}*/
+.all_container {
+    max-width: 1208px!important;
+    margin: auto!important;
+}
+
 
 
 
@@ -1768,6 +1892,18 @@ a.Sign_account {
     margin: 110px 0 16px 0;
 }
 
+/*registor btn start 13.05*/
+.btn-continue:focus, .btn-continue:active {
+    background-color: #f43220 !important;
+    border-color: #F54838 !important;
+}
+
+.btn-continue:hover {
+    background-color: #f32916 !important;
+    border-color: #F54838 !important;
+}
+/*registor btn end 13.05*/
+
 .registrationTitle{
     font-family: Metropolis;
     font-style: normal;
@@ -1845,7 +1981,12 @@ a.Sign_account {
 
 footer {
     background: #241F2D;
-    padding: 126px 118px;
+    padding: 126px 0!important;
+}
+
+.footer_container {
+    max-width: 1208px!important;
+    margin: auto;
     display: flex!important;
     justify-content: space-between;
 }
